chore: auto-sync [2026-04-09 06:31 UTC] — 31 source files, 62 artifacts
